client/src/components/App.css
/* ============================ DESKTOP Version ============================ */

/* ________________________________ TopMenu ________________________________ */
#topMenuMenuContainer {
  background-color: #f4f4f4;
}

#topMenuBar {
  max-width: 1250px;
  width: 100%;
  display: flex;
  flex-direction: row;
  margin: auto;
}
/* -------------------------------------------------------------------------- */

/* _________________________________ NavBar _________________________________ */
#navBarContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#navBarStyledImage {
  margin: 0 0 5px 20px;
  max-height: 11.875em;
}

.navBarEachNav {
  font-size: 1.308em;
  color: black;
  font-weight: bold;
}

#imageDividerContainer {
  height: 100%;
  width: 100%;
}

#imageDivider {

}
/* -------------------------------------------------------------------------- */

/* __________________________________ Home __________________________________ */
#homeMainContainer {
  max-width: 1250px;
  margin: auto;
}

#homeRedContainer {
  background-color: #AF3120;
  height: inherit;
}

#homeCarouselContainer {
  max-height: 600px;
  max-width: 1166px;
  padding: 45px 0 0 0;
}

#frontPageImageCarouselContainer {
  padding: 0 0 100px 80px;
  text-align: center;
  max-height: 600px;
  max-width: 1166px;
}

#frontPageImageCarousel {
  display: inline-block;
}

.frontPageImagePhoto {
  max-height: 600px;
  max-width: 1166px;
}

#homeContactUsLink {
  padding: 60px;
}

#homeContactUs {
  background-color: #AF3120;
  border: 1px solid white;
  color: white;
  padding: 10px 20px;
  margin: 28px 25px 0 0;
  text-align: center;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
}


#homeContactArea {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  flex-wrap: wrap;
}

#homeContactAreaLeft {
  flex: 1;
}

#homeSectionHeader {
  color: white;
  padding: 80px 0 0 25px;
  margin-bottom: 5px;
  font-weight: normal;
}

#homeSection {
  color: white;
  padding: 0px 25px 50px 25px;
  margin: 0;
  font-weight: normal;
}
.homeSubTitle {
  font-size: 22px;
  font-weight: bold;
}

.homeSubText {
  color: #494949;
  font-size: 16px;
}

#homeInfo {
  margin: 40px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
}

#homeVisits {
  width: 30%;
  margin-right: 15px;
}

#homeLiving {
  width: 30%;
  margin-right: 15px;
}

#homeHomes {
  width: 30%;
  margin-right: 15px;
}

.homeIcon {
  color: #AF3120;
}

.homeStyledLink {
  font-size: 15px;
  color: #AF3120;
}

#testimonialsFullSection {
  max-height: 250px;
  max-width: 1170px;
}

#testimonialsTitle {
  font-size: 24px;
  font-weight: bold;
}

#testimonialsTopPart {
  display: flex;
  flex-direction: column;
  max-width: 1170px;
}

#testimonialsName {
  padding: 15px 0 0 30px;
}

#testimonialsQuoteBox {
  border-radius: 5px;
  background-color: #DEDEDF;
  min-height: 50px;
  font-size: 15px;
}

#testimonialsQuote {
  max-width: 1100px;
  padding-left: 10px;
}

#testimonialsDividerLine {
  margin: 6px 0 6px 3px;
}

#testimonialsCarouselStyle {
  min-height: 250px;
}

#homeHalfWhiteSpace {
  height: 50px;
}

#homeWhiteSpace {
  height: 120px;
}
/* -------------------------------------------------------------------------- */

/* ________________________________ About Us ________________________________ */
#aboutUsMainContainer {
  max-width: 1175px;
  margin: auto;
}

#aboutUsTitle {
  padding-top: 25px;
  display: flex;
  justify-content: center;
  font-weight: bold;
}
#aboutUsFlexBox {
  display: flex;
  flex-direction: row;
}

#aboutUsAllText {
  display: flex;
  flex-direction: column;
}

#aboutUsPhoto {
  padding: 30px 30px 20px 20px;
  width: 900px;
}

.aboutUsSubTitle {
  padding-top: 5px;
  font-weight: bold;
}

.aboutUsSubTextContainer {
  padding-left: 20px;
}

.aboutUsSubText {
  color: #515151;
  font-weight: normal;
  font-size: 16px;
}

.aboutUsContacts {
  padding-left: 20px;
}

.aboutUsWhiteSpace {
  height: 80px;
}
/* -------------------------------------------------------------------------- */

/* _____________________________ Our Providers _____________________________ */
#ourProvidersMainContainer {
  max-width: 1250px;
  margin: auto;
}

#ourProvidersTitle {
  font-weight: bold;
  padding-top: 5px;
}

#ourProvidersFullSection {
  display: flex;
  flex-direction: row;
}

#ourProvidersProfile {
  display: flex;
  flex-direction: column;
  padding: 10px 5px 0 5px;
  max-height: 600px;
}

#ourProvidersBottomSection {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

#ourProvidersEdu {
  display: flex;
  flex-direction: column;
  max-width: 260px;
}

#ourProvidersBio {
  margin-bottom: 7px;
}

#ourProvidersInterests {
  display: flex;
  flex-direction: column;
  max-width: 240px;
}

#ourProvidersInt {
  margin-bottom: 7px;
}

#ourProvidersInfo {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

#ourProvidersPic {
  max-width: 600px;
}

#ourProvidersName {
  color: #AF3120;
  padding-bottom: 10px;
}

#ourProvidersNames {
  display: block;
}

#ourProvidersIhapSection {
  display: flex;
  flex-flow: row wrap;
  padding: 10px;
  column-count: 3;
}

#ourProvidersIhap {
  padding: 10px 0 0 10px;
  height: 50px;
  width: 220px;
  border: solid .5px;
  height: 100%;
}

#ourProvidersState {
  font-size: 19px;
}

#ourProvidersTopWhiteSpace {
  height: 55px;
}

#ourProvidersHalfWhiteSpace {
  height: 40px;
}

#ourProvidersWhiteSpace {
  height: 80px;
}
/* -------------------------------------------------------------------------- */

/* ______________________________ Our Services ______________________________ */
#servicesMainContainer {
  max-width: 1250px;
  margin: auto;
}

#servicesSubSection {
  display: flex;
  flex-flow: row wrap;
  padding-top: 65px;
  max-width: 1200px;
}

#servicesInfo {
  display: flex;
  flex-direction: column;
  max-width: 850px;
  padding-left: 15px;
}

.servicesSubTextContainer {
  padding-left: 40px;
}
/* ... */

